# dart_quickjs

./: .metadata  CHANGELOG.md  LICENSE  README-ZH.md  README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/allan/dart_quickjs/: DartQuickjsPlugin.kt
cxx/: CMakeLists.txt  ffi.cpp  ffi.h  prebuild.sh
cxx/quickjs/: quickjs.c
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/allan/dart_quickjs_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/assets/: main.js
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
ios/: dart_quickjs.podspec
ios/Classes/: DartQuickjsPlugin.h  DartQuickjsPlugin.m  SwiftDartQuickjsPlugin.swift
ios/cxx/: ffi.cpp  ffi.h  quickjs.c
lib/: dart_quickjs.dart
lib/src/: bindings.dart  cache.dart  common.dart  extensions.dart  js_value.dart  library.dart  observer.dart  plugin.dart  runtime.dart  typedef.dart
lib/src/plugins/: println.dart  timer.dart
macos/: dart_quickjs.podspec
macos/Classes/: DartQuickjsPlugin.swift
macos/cxx/: ffi.cpp  ffi.h
